# gb-mcp-notify

./: README.md  pyproject.toml
.github/: copilot-instructions.md
src/gb_mcp_notify/: __init__.py  _notifier.py  server.py
