[project]
name = "gb-mcp-notify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Glauber Brennon", email = "glauberbrennon@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.26.0",
]

[project.scripts]
gb-mcp-notify = "gb_mcp_notify:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
